#	General information
[package]
name = "kfs"
version = "0.0.5"
edition = "2021"
authors = ["lmartin <lmartin@student.42.fr>", "nieyraud <nieyraud@student.42.fr>"]

[[bin]]
name='kernel'
path='srcs/main.rs'
test = true

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"

#	Dependencies
[dependencies]

[features]
# You can add feature by naming them in default
# These feature need to be declare
default = []

# Declare feature multitasking, depends on nothing
multitasking = []
