#	General information
[package]
name = "kfs"
version = "0.0.5"
edition = "2021"
authors = ["lmartin <lmartin@student.42.fr>", "nieyraud <nieyraud@student.42.fr>"]

[[bin]]
name='kernel'
path='srcs/kinit.rs'
test = true

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"

#	Dependencies
[dependencies]
sys_macros = { path= "srcs/sys_macros"}

[features]
# You can add feature by naming them in default
# These feature need to be declare
# e.g: default = ["multitasking"]
# e.g: dev = ["multitasking", "debug_features"]
default = ["multitasking"]

# Declare feature multitasking, depends on nothing
multitasking = []

# List all debug features you want to enable
debug_features = ["crash_on_panic"]

mutex_debug = []
alloc_debug = []
crash_on_panic = []
